See COPYING for copying conditions.

Please send bfast bug reports to nhomer@cs.ucla.edu

Version 0.1.10
* bmatches supports only matching to the forward strand.  This 
facilitates aligning methylated sequences.
* bpreprocess bug fixed when using an exons file.
* bevalsim now requires knowing paired end info and the original
reads file generated by bgeneratereads.

Version 0.1.9
* Updated bmf output to properly display when the maximum number
of matches has been reached.
* bmfconvert does not require paired end argument.
* Now supports trimming whitespace including carriage return on the
ends of the reads, mainly to support reads made on Windows machines.
* Updated butil binaries.

Version 0.1.8
* Updated to support Ns in the reads; will still ignore "."s.
* Adjusting bounds bug with -e option fixed.  Would not default to 
the correct end position.
* Updated command line parsing to avoid memory leaks.

Version 0.1.7
* Update bpostprocess for paired end support: now tested.
* Added support for filtering each end by score for paired end reads.
* Removed extra "." in inversions file (bpostprocess).
* Updated btestindexes against small bugs and added optimizations.
* Added bgeneratedistribution to calculate error distributions.

Version 0.1.6
* bgeneratereads was not producing SNPs and errors properly.
* bmatches now supresses timing output when -t is not specified.
* bpreprocess memory leaks fixed.

Version 0.1.5
* Fixed bug in bpreprocess where the program crashed right before terminating.

Version 0.1.4 
* Updated bmatches output file name for the filtered reads.
* Updated bpostprocess output file names.
* Recoded btestindexes to support finding indexes for color space.

Version 0.1.3 
* Improved speed for index creation while specifying an exon-like structure.

Version 0.1.2 
* Added support for index creation while specifying an exon-like structure.

Version 0.1.1 
* First alpha public release.

-------------------------------------------------------
