@@ -11,6 +11,7 @@ facilitates aligning methylated sequences.
 * bpreprocess bug fixed when using an exons file.
 * bevalsim now requires knowing paired end info and the original
 reads file generated by bgeneratereads.
+* fixed bug in bgeneratereads and bevalsim for paired end data.
 
 Version 0.1.9
 * Updated bmf output to properly display when the maximum number
